# strands-eval

./: .env.example  .gitignore  INSTALL.md  Makefile  QUICKSTART.md  README.md  config.py  pyproject.toml  pytest.ini  requirements.txt  run_evaluation.py  uv.md
agent/: __init__.py  sql_agent_runner.py
datasets/: analytics_schema.json  golden_contexts.json  test_cases.json
evaluators/: __init__.py  answer_quality.py  context_retrieval.py  query_efficiency.py  sql_correctness.py
tests/: test_sql_agent.py
